# MprpcProject

./: README.md
mprpc/: CMakeLists.txt  README.md  autobuild.sh
mprpc/example/: friend.pb.cc  friend.pb.h  friend.proto  user.pb.cc  user.pb.h  user.proto
mprpc/example/callee/: CMakeLists.txt  friendservice.cc  userservice.cc
mprpc/example/caller/: CMakeLists.txt  callfriendservice.cc  calluserservice.cc
mprpc/lib/include/: logger.h  mprpcchannel.h  mprpccontroller.h  rpcheader.pb.h  rpcprovider.h  zookeeperutil.h
mprpc/src/: CMakeLists.txt  logger.cc  mprpcapplication.cc  mprpcchannel.cc  mprpcconfig.cc  mprpccontroller.cc  rpcheader.pb.cc  rpcheader.proto  rpcprovider.cc  zookeeperutil.cc
mprpc/src/include/: lockqueue.h  mprpcapplication.h  mprpcchannel.h  mprpcconfig.h  rpcprovider.h
mprpc/test/protobuf/: a.out  main.cc  test.pb.cc  test.pb.h  test.proto
